Wed Jul 18 12:55:54 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/benchmark.rb: Fix Benchmark.benchmark output with an empty
	  caption.  patched by Benoit Daloze. [ruby-core:45719] [Bug #6610]

Wed Jul 18 10:00:54 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/debug.rb:  Added toplevel documentation.  Based on patch by Oscar
	  Del Ben.  [Bug #6743], fixes #146 on github.

Wed Jul 18 09:33:59 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/win32ole/test_win32ole_event.rb (TestWIN32OLE_EVENT): use
	  standard skip method to skip tests.

Wed Jul 18 09:26:45 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/logger.rb:  Updated typos and output to match modern Logger
	  output.  Patch by Marcus Stollsteimer.  [Bug #6738]

Wed Jul 18 07:59:29 2012  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/util.rb (CGI.escapeHTML,unescapeHTML): Add &apos; for HTML5
	  escaping.
	  [Feature #6620]

Tue Jul 17 22:17:13 2012  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb: call io.close! for Tempfile.

Tue Jul 17 16:41:32 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* proc.c (rb_proc_arity): return normal value (not -n-1) if it is not
	  a labmda, or it is a labmda and no arg_opts. [Bug #5694]

Tue Jul 17 03:56:34 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: strings with YAML anchors
	  are properly referenced. Patched by Joe Rafaniello via Github:
	    https://github.com/tenderlove/psych/pull/69
	* ext/psych/lib/psych/visitors/yaml_tree.rb: ditto
	* test/psych/test_alias_and_anchor.rb: test for change

Mon Jul 16 23:20:24 2012  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_float_cmp): use FIXNUM_MIN and FIXNUM_MAX,
	  instead of LONG_MIN and LONG_MAX.

Mon Jul 16 22:50:41 2012  Tanaka Akira  <akr@fsij.org>

	* numeric.c (flo_to_s): use the exponential form if the integer part
	  is longer than or equal DBL_DIG.
	  [ruby-dev:45960] [ruby-trunk - Bug #6741]
