@@ -1,3 +1,11 @@
+Wed Jul 18 12:59:50 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* encoding.c (load_encoding): explicit cast  to suppress  warning.
+	  Though the  cast truncates some bits, from  heuristic analysis I
+	  believe it is OK to do so here.
+
+	* bignum.c (rb_cstr_to_inum): ditto.
+
 Wed Jul 18 12:55:54 2012  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/benchmark.rb: Fix Benchmark.benchmark output with an empty
